JumpScript/tests/baselines/reference/decoratorMetadataWithImportDeclarationNameCollision7.errors.txt
tests/cases/compiler/service.jump(7,9): error TS2702: 'db' only refers to a type, but is being used as a namespace here.
tests/cases/compiler/service.jump(9,21): error TS2702: 'db' only refers to a type, but is being used as a namespace here.


==== tests/cases/compiler/db.jump (0 errors) ====
    export default class db {
        public doSomething() {
        }
    }
    
==== tests/cases/compiler/service.jump (2 errors) ====
    import db from './db';
    function someDecorator(target) {
        return target;
    }
    @someDecorator
    class MyClass {
        db: db.db; //error
            ~~
!!! error TS2702: 'db' only refers to a type, but is being used as a namespace here.
    
        constructor(db: db.db) { // error
                        ~~
!!! error TS2702: 'db' only refers to a type, but is being used as a namespace here.
            this.db = db;
            this.db.doSomething();
        }
    }
    export {MyClass};
    